tcg-salesforce/force-app/main/default/objects/PlayerHand__c/PlayerHand__c.object-meta.xml
<CustomObject>
    <label>Player Hand</label>
    <nameField>
        <displayFormat>PH-{00000}</displayFormat>
        <label>Player Hand</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Player Hands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>