tcg-salesforce/force-app/main/default/objects/PlayerHand__c/fields/ContactPlayerHand__c.field-meta.xml
<CustomField>
    <fullName>ContactPlayerHand__c</fullName>
    <label>Contact Player Hand</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Player Hands</relationshipLabel>
    <relationshipName>PlayerHands</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>