tcg-salesforce/force-app/main/default/objects/PlayerHand__c/fields/MatchPlayerHand__c.field-meta.xml
<CustomField>
    <fullName>MatchPlayerHand__c</fullName>
    <label>Match</label>
    <referenceTo>Match__c</referenceTo>
    <relationshipLabel>Matche Player Hands</relationshipLabel>
    <relationshipName>PlayerHands</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>