tcg-salesforce/force-app/main/default/objects/PlayerHand__c/fields/PlayerCard__c.field-meta.xml
<CustomField>
    <fullName>PlayerCard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Player Card</label>
    <referenceTo>PlayerCard__c</referenceTo>
    <relationshipLabel>Player Hands</relationshipLabel>
    <relationshipName>PlayerHands</relationshipName>
    <type>Lookup</type>
</CustomField>